--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Morgan, Godfrey Charles, 1830-1913 -- Quotations'
 - !lcsh 'Speeches, addresses, etc.'
 - !lcc 'PR'
+- GITenberg
 title: Wit and Wisdom of Lord Tredegar
 url: http://www.gutenberg.org/ebooks/39808
